--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+    "buildCommand": "cd campus-bites && npm install && npm run build",
+    "outputDirectory": "campus-bites/dist",
+    "installCommand": "cd campus-bites && npm install",
     "rewrites": [
         {
             "source": "/(.*)",
