--- a/campus-bites/package.json
+++ b/campus-bites/package.json
@@ -14,13 +14,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "lucide-react": "^0.378.0"
+    "lucide-react": "^0.378.0",
+    "vite": "^5.2.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.2.11",
     "eslint": "^8.57.0"
   },
   "license": "ISC"
