--- a/campus-bites/package.json
+++ b/campus-bites/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-oauth/google": "^0.13.4",
+    "lucide-react": "^0.378.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "lucide-react": "^0.378.0",
     "vite": "^5.2.11"
   },
   "devDependencies": {
